# google_drive_loader

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py  config.yaml
test/: test_quickstart.py
